tdf#82591 ORowSetBase::getRow handles insert row correctly

and critically for this bug, modified row, too.

Change-Id: I11c418d8926cabe81fcdb65d7293a4283e566f7a